--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -4,12 +4,12 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
 
-   <!--  <th:block layout:fragment="title"></th:block> -->
+   	<th:block layout:fragment="title"></th:block>
 
     <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}" />
     <link rel="stylesheet" th:href="@{/css/bootstrap-grid.min.css}" />
-    <link rel="stylesheet" th:href="@{/css/bootstrap-reboot.min.css" />
-    <link rel="stylesheet" th:href="@{/css/bootstrap-utilities.min.css" />
+<!--     <link rel="stylesheet" th:href="@{/css/bootstrap-reboot.min.css" /> -->
+<!--     <link rel="stylesheet" th:href="@{/css/bootstrap-utilities.min.css" /> -->
 
     <th:block layout:fragment="add-css"></th:block>
 </head>
