--- a/src/main/resources/templates/post/write.html
+++ b/src/main/resources/templates/post/write.html
@@ -65,8 +65,27 @@
 
             window.onload = () => {
                 initCreatedDate();
+                renderPostInfo();
             }
+			
+         	// 게시글 상세정보 렌더링
+            function renderPostInfo() {
+                const post = [[ ${post} ]];
 
+                if ( !post ) {
+                    initCreatedDate();
+                    return false;
+                }
+
+                const form = document.getElementById('saveForm');
+                const fields = ['id', 'title', 'contents', 'writer', 'noticeYn'];
+                form.isNotice.checked = (post.noticeYn == 1) ? true : false ;
+                form.createdDate.value = dayjs(post.createdDate).format('YYYY-MM-DD HH:mm');
+
+                fields.forEach(field => {
+                    form[field].value = post[field];
+                })
+            }
 
             // 등록일 초기화
             function initCreatedDate() {
@@ -80,9 +99,9 @@
                 const fields = [form.title, form.writer, form.contents];
                 const fieldNames = ['제목', '이름', '내용'];
 
-/*                 for (let i = 0, len = fields.length; i < len; i++) {
+                 for (let i = 0, len = fields.length; i < len; i++) {
                     isValid(fields[i], fieldNames[i]);
-                } */
+                }
 				
                 document.getElementById('saveBtn').disabled = true;
                 form.noticeYn.value = (form.isNotice.checked) ? 1 : 0;
