--- a/bin/main/templates/fragments/body.html
+++ b/bin/main/templates/fragments/body.html
@@ -1,11 +1,44 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <body th:fragment="main-body">
-    
-	<p>body TEST</p>
+	<!--/* 공통 : 상단 메뉴영역 */-->
+   	 <header class="p-3 mb-3 border-bottom">
+	    <div class="container">
+	      <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+	        <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-dark text-decoration-none">
+	          <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"/></svg>
+	        </a>
+	
+	        <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+	          <li><a href="#" class="nav-link px-2 link-secondary">Overview</a></li>
+	          <li><a href="#" class="nav-link px-2 link-dark">Inventory</a></li>
+	          <li><a href="#" class="nav-link px-2 link-dark">Customers</a></li>
+	          <li><a href="#" class="nav-link px-2 link-dark">Products</a></li>
+	        </ul>
+	
+	        <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
+	          <input type="search" class="form-control" placeholder="Search..." aria-label="Search">
+	        </form>
+	
+	        <div class="dropdown text-end">
+	          <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+	            <img src="https://github.com/mdo.png" alt="mdo" width="32" height="32" class="rounded-circle">
+	          </a>
+	          <ul class="dropdown-menu text-small">
+	            <li><a class="dropdown-item" href="#">New project...</a></li>
+	            <li><a class="dropdown-item" href="#">Settings</a></li>
+	            <li><a class="dropdown-item" href="#">Profile</a></li>
+	            <li><hr class="dropdown-divider"></li>
+	            <li><a class="dropdown-item" href="#">Sign out</a></li>
+	          </ul>
+	        </div>
+	      </div>
+	    </div>
+	  </header>
     <!--/* 페이지별 컨텐츠 : 페이지별 실제 콘텐츠가 들어가는 영역 */-->
-    <th:block layout:fragment="content"></th:block>
-
+    <main class="p-5 mb-3">
+    	<th:block layout:fragment="content"></th:block>
+	</main>
   
 
     <script th:src="@{/js/bootstrap.min.js}"></script>
