--- a/bin/main/templates/post/list.html
+++ b/bin/main/templates/post/list.html
@@ -28,10 +28,10 @@
                 </div>
               
                 <!--/* 리스트 */-->
-                <table class="tb tb_col">
-                    <colgroup>
-                        <col style="width:50px;"/><col style="width:7.5%;"/><col style="width:auto;"/><col style="width:10%;"/><col style="width:15%;"/><col style="width:7.5%;"/>
-                    </colgroup>
+                <table class="table table-hover">
+<!--                     <colgroup>
+                        <col style="col"/><col style="width:7.5%;"/><col style="width:auto;"/><col style="width:10%;"/><col style="width:15%;"/><col style="width:7.5%;"/>
+                    </colgroup> -->
                     <thead>
                         <tr>
                             <th scope="col"><input type="checkbox"/></th>
@@ -42,7 +42,7 @@
                             <th scope="col">조회</th>
                         </tr>
                     </thead>
-                    <tbody>
+                    <tbody class="table-group-divider">
                         <tr th:if="${not #lists.isEmpty( posts )}" th:each="row, status : ${posts}">
                             <td><input type="checkbox"/></td>
                             <td th:text="${row.noticeYn == false ? (status.size - status.index) : '공지'}"></td>
