--- a/bin/main/templates/post/write.html
+++ b/bin/main/templates/post/write.html
@@ -99,9 +99,9 @@
                 const fields = [form.title, form.writer, form.contents];
                 const fieldNames = ['제목', '이름', '내용'];
 
-                 for (let i = 0, len = fields.length; i < len; i++) {
+/*                 for (let i = 0, len = fields.length; i < len; i++) {
                     isValid(fields[i], fieldNames[i]);
-                }
+                } */
 				
                 document.getElementById('saveBtn').disabled = true;
                 form.noticeYn.value = (form.isNotice.checked) ? 1 : 0;
