--- a/src/main/resources/templates/post/view.html
+++ b/src/main/resources/templates/post/view.html
@@ -12,7 +12,7 @@
     
         <div class="content">
             <section>
-                <table class="tb tb_row">
+                <table class="table">
                     <colgroup>
                         <col style="width:10%;" /><col style="width:23%;" /><col style="width:10%;" /><col style="width:23%;" />
                     </colgroup>
@@ -43,7 +43,7 @@
                 </table>
                 <p class="btn_set">
                     <a th:href="@{/post/write.do( id=${post.id} )}" class="btns btn_bdr4 btn_mid">수정</a>
-                    <button type="button" class="btns btn_bdr1 btn_mid">삭제</button>
+                    <button type="button" class="btns btn_bdr1 btn_mid" onclick="deletePost();">삭제</button>
                     <a th:href="@{/post/list.do}" class="btns btn_bdr3 btn_mid">뒤로</a>
                 </p>
             </section>
@@ -58,12 +58,27 @@
                 initCreatedDate();
             }
 
-
             // 등록일 초기화
             function initCreatedDate() {
                 document.getElementById('createdDate').value = dayjs().format('YYYY-MM-DD');
             }
 
+            // 게시글 삭제
+            function deletePost() {
+                const id = [[ ${post.id} ]];
+                if ( !confirm(id + '번 게시글을 삭제할까요?') ) {
+                    return false;
+                }
+                const formHtml = `
+                    <form id="deleteForm" action="/post/delete.do" method="post">
+                        <input type="hidden" id="id" name="id" value="${id}" />
+                    </form>
+                `;
+                const doc = new DOMParser().parseFromString(formHtml, 'text/html');
+                const form = doc.body.firstChild;
+                document.body.append(form);
+                document.getElementById('deleteForm').submit();
+            }
         /*]]>*/
         </script>
     </th:block>
