--- a/src/main/resources/templates/fragments/body.html
+++ b/src/main/resources/templates/fragments/body.html
@@ -10,7 +10,7 @@
 	        </a>
 	
 	        <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-	          <li><a href="#" class="nav-link px-2 link-secondary">Overview</a></li>
+	          <li><a href="/post/list.do" class="nav-link px-2 link-secondary">게시판리스트</a></li>
 	          <li><a href="#" class="nav-link px-2 link-dark">Inventory</a></li>
 	          <li><a href="#" class="nav-link px-2 link-dark">Customers</a></li>
 	          <li><a href="#" class="nav-link px-2 link-dark">Products</a></li>
