--- a/src/main/resources/templates/post/view.html
+++ b/src/main/resources/templates/post/view.html
@@ -42,9 +42,9 @@
                     </tbody>
                 </table>
                 <p class="btn_set">
-                    <a th:href="@{/post/write.do( id=${post.id} )}" class="btns btn_bdr4 btn_mid">수정</a>
-                    <button type="button" class="btns btn_bdr1 btn_mid" onclick="deletePost();">삭제</button>
-                    <a th:href="@{/post/list.do}" class="btns btn_bdr3 btn_mid">뒤로</a>
+                	<button type="button" onclick="goWritePage();" class="btn btn-outline-primary">수정</button>
+                	<button type="button" onclick="deletePost();" class="btn btn-outline-primary">삭제</button>
+                	<button type="button" onclick="goListPage();" class="btn btn-outline-primary">목록</button>
                 </p>
             </section>
         </div> <!--/* .content */-->
@@ -62,16 +62,35 @@
             function initCreatedDate() {
                 document.getElementById('createdDate').value = dayjs().format('YYYY-MM-DD');
             }
-
+         	// 게시글 수정
+            function goWritePage() {
+                location.href = '/post/write.do' + location.search;	//url 쿼리 스트링 리턴
+            }
+         	
+         	// 게시글 목록
+         	function goListPage(){
+         		const queryString = new URLSearchParams(location.search);	// 쿼리 스트링 객체화
+         		queryString.delete('id');	// 글 번호(id) 삭제
+         		console.log(queryString.toString());
+         		location.href ='/post/list.do'+ '?' + queryString.toString();
+         	}
+         
             // 게시글 삭제
             function deletePost() {
                 const id = [[ ${post.id} ]];
                 if ( !confirm(id + '번 게시글을 삭제할까요?') ) {
                     return false;
                 }
+                
+                let inputHtml = '';
+                
+                new URLSearchParams(location.search).forEach((value, key) => {
+                	inputHtml += `<input type="hidden" name="${key}" value="${value}" />`;
+                })
+                
                 const formHtml = `
                     <form id="deleteForm" action="/post/delete.do" method="post">
-                        <input type="hidden" id="id" name="id" value="${id}" />
+                        ${inputHtml}
                     </form>
                 `;
                 const doc = new DOMParser().parseFromString(formHtml, 'text/html');
