--- a/src/main/resources/templates/post/write.html
+++ b/src/main/resources/templates/post/write.html
@@ -52,8 +52,8 @@
 					</table>
                 </form>
                 <p class="btn_set">
-                    <button type="button" id="saveBtn" onclick="savePost();" class="btns btn_st3 btn_mid">저장</button>
-                    <a th:href="@{/post/list.do}" class="btns btn_bdr3 btn_mid">뒤로</a>
+                    <button type="button" id="saveBtn" onclick="savePost();" class="btn btn-outline-primary">저장</button>
+                    <a th:href="@{/post/list.do}" class="btn btn-outline-primary">목록</a>
                 </p>
             </section>
         </div> <!--/* .content */-->
