--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -11,16 +11,16 @@
         </div>
 
         <div class="content">
-			<form>
+			<form action="/login" method="post">
 				<img class="mb-4" src="../assets/brand/bootstrap-logo.svg" alt="" width="72" height="57">
 				<h1 class="h3 mb-3 fw-normal">Please sign in</h1>
 				
 				<div class="form-floating">
-					<input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+					<input type="email" class="form-control" id="floatingInput" placeholder="name@example.com" name="userId">
 					<label for="floatingInput">Email address</label>
 				</div>
 				<div class="form-floating">
-					<input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+					<input type="password" class="form-control" id="floatingPassword" placeholder="Password" name="userPassword">
 					<label for="floatingPassword">Password</label>
 				</div>
 				
