일정관리 기능 : 달력 알고리즘 연습

--- a/src/main/resources/templates/fragments/body.html
+++ b/src/main/resources/templates/fragments/body.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz//layouthymeleaft">
 <body th:fragment="main-body">
 	<!--/* 공통 : 상단 메뉴영역 */-->
    	 <header class="p-3 mb-3 border-bottom">
@@ -11,7 +11,7 @@
 	
 	        <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
 	          <li><a href="/post/list.do" class="nav-link px-2 link-secondary">게시판리스트</a></li>
-	          <li><a href="#" class="nav-link px-2 link-dark">Inventory</a></li>
+	          <li><a href="/post/calendar.do" class="nav-link px-2 link-dark">일정관리</a></li>
 	          <li><a href="#" class="nav-link px-2 link-dark">Customers</a></li>
 	          <li><a href="#" class="nav-link px-2 link-dark">Products</a></li>
 	        </ul>
