--- a/src/main/resources/templates/fragments/body.html
+++ b/src/main/resources/templates/fragments/body.html
@@ -12,7 +12,7 @@
 	        <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
 	          <li><a href="/post/list.do" class="nav-link px-2 link-secondary">게시판리스트</a></li>
 	          <li><a href="/post/calendar.do" class="nav-link px-2 link-dark">일정관리</a></li>
-	          <li><a href="#" class="nav-link px-2 link-dark">Customers</a></li>
+	          <li><a href="/ott/list.do" class="nav-link px-2 link-dark">OTT 리뷰</a></li>
 	          <li><a href="#" class="nav-link px-2 link-dark">Products</a></li>
 	        </ul>
 	
